; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_8t_8multx1mult_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_bi_msa.c_hevc_hv_bi_8t_8multx1mult_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32, i32*, i32*, i32, i32)* @hevc_hv_bi_8t_8multx1mult_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_bi_8t_8multx1mult_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32* %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32*, align 8
  %24 = alloca i32*, align 8
  %25 = alloca i32*, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i64, align 8
  %46 = alloca i64, align 8
  %47 = alloca i64, align 8
  %48 = alloca i64, align 8
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i64, align 8
  %52 = alloca i64, align 8
  %53 = alloca i64, align 8
  %54 = alloca i64, align 8
  %55 = alloca i64, align 8
  %56 = alloca i64, align 8
  %57 = alloca i64, align 8
  %58 = alloca i64, align 8
  %59 = alloca i64, align 8
  %60 = alloca i64, align 8
  %61 = alloca i64, align 8
  %62 = alloca i64, align 8
  %63 = alloca i64, align 8
  %64 = alloca i64, align 8
  %65 = alloca i64, align 8
  %66 = alloca i64, align 8
  %67 = alloca i32, align 4
  %68 = alloca i32, align 4
  %69 = alloca i32, align 4
  %70 = alloca i32, align 4
  %71 = alloca i32, align 4
  %72 = alloca i32, align 4
  %73 = alloca i32, align 4
  %74 = alloca i32, align 4
  %75 = alloca i32, align 4
  %76 = alloca i32, align 4
  %77 = alloca i32, align 4
  %78 = alloca i32, align 4
  %79 = alloca i32, align 4
  %80 = alloca i32, align 4
  %81 = alloca i32, align 4
  %82 = alloca i32, align 4
  %83 = alloca i32, align 4
  %84 = alloca i32, align 4
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32* %2, i32** %13, align 8
  store i32 %3, i32* %14, align 4
  store i32* %4, i32** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32* %6, i32** %17, align 8
  store i32* %7, i32** %18, align 8
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  %85 = load i32*, i32** @ff_hevc_mask_arr, align 8
  %86 = call i64 @LD_SB(i32* %85)
  store i64 %86, i64* %45, align 8
  %87 = load i32, i32* %12, align 4
  %88 = mul nsw i32 3, %87
  %89 = add nsw i32 %88, 3
  %90 = load i32*, i32** %11, align 8
  %91 = sext i32 %89 to i64
  %92 = sub i64 0, %91
  %93 = getelementptr inbounds i32, i32* %90, i64 %92
  store i32* %93, i32** %11, align 8
  %94 = call i32 @__msa_ldi_h(i32 128)
  store i32 %94, i32* %50, align 4
  %95 = load i32, i32* %50, align 4
  %96 = shl i32 %95, 6
  store i32 %96, i32* %50, align 4
  %97 = load i32*, i32** %17, align 8
  %98 = call i32 @LD_SH(i32* %97)
  store i32 %98, i32* %49, align 4
  %99 = load i32, i32* %49, align 4
  %100 = load i32, i32* %37, align 4
  %101 = load i32, i32* %38, align 4
  %102 = load i32, i32* %39, align 4
  %103 = load i32, i32* %40, align 4
  %104 = call i32 @SPLATI_H4_SH(i32 %99, i32 0, i32 1, i32 2, i32 3, i32 %100, i32 %101, i32 %102, i32 %103)
  %105 = load i32*, i32** %18, align 8
  %106 = call i32 @LD_SH(i32* %105)
  store i32 %106, i32* %49, align 4
  %107 = load i32, i32* %49, align 4
  %108 = load i32, i32* %49, align 4
  %109 = call i32 @UNPCK_R_SB_SH(i32 %107, i32 %108)
  %110 = load i32, i32* %49, align 4
  %111 = load i32, i32* %41, align 4
  %112 = load i32, i32* %42, align 4
  %113 = load i32, i32* %43, align 4
  %114 = load i32, i32* %44, align 4
  %115 = call i32 @SPLATI_W4_SH(i32 %110, i32 %111, i32 %112, i32 %113, i32 %114)
  %116 = load i64, i64* %45, align 8
  %117 = add nsw i64 %116, 2
  store i64 %117, i64* %46, align 8
  %118 = load i64, i64* %45, align 8
  %119 = add nsw i64 %118, 4
  store i64 %119, i64* %47, align 8
  %120 = load i64, i64* %45, align 8
  %121 = add nsw i64 %120, 6
  store i64 %121, i64* %48, align 8
  %122 = load i32, i32* %20, align 4
  %123 = ashr i32 %122, 3
  store i32 %123, i32* %22, align 4
  br label %124

124:                                              ; preds = %410, %10
  %125 = load i32, i32* %22, align 4
  %126 = add nsw i32 %125, -1
  store i32 %126, i32* %22, align 4
  %127 = icmp ne i32 %125, 0
  br i1 %127, label %128, label %417

128:                                              ; preds = %124
  %129 = load i32*, i32** %11, align 8
  store i32* %129, i32** %23, align 8
  %130 = load i32*, i32** %15, align 8
  store i32* %130, i32** %25, align 8
  %131 = load i32*, i32** %13, align 8
  store i32* %131, i32** %24, align 8
  %132 = load i32*, i32** %23, align 8
  %133 = load i32, i32* %12, align 4
  %134 = load i64, i64* %27, align 8
  %135 = load i64, i64* %28, align 8
  %136 = load i64, i64* %29, align 8
  %137 = load i64, i64* %30, align 8
  %138 = load i64, i64* %31, align 8
  %139 = load i64, i64* %32, align 8
  %140 = load i64, i64* %33, align 8
  %141 = call i32 @LD_SB7(i32* %132, i32 %133, i64 %134, i64 %135, i64 %136, i64 %137, i64 %138, i64 %139, i64 %140)
  %142 = load i32, i32* %12, align 4
  %143 = mul nsw i32 7, %142
  %144 = load i32*, i32** %23, align 8
  %145 = sext i32 %143 to i64
  %146 = getelementptr inbounds i32, i32* %144, i64 %145
  store i32* %146, i32** %23, align 8
  %147 = load i64, i64* %27, align 8
  %148 = load i64, i64* %28, align 8
  %149 = load i64, i64* %29, align 8
  %150 = load i64, i64* %30, align 8
  %151 = load i64, i64* %31, align 8
  %152 = load i64, i64* %32, align 8
  %153 = load i64, i64* %33, align 8
  %154 = call i32 @XORI_B7_128_SB(i64 %147, i64 %148, i64 %149, i64 %150, i64 %151, i64 %152, i64 %153)
  %155 = load i64, i64* %27, align 8
  %156 = load i64, i64* %27, align 8
  %157 = load i64, i64* %45, align 8
  %158 = load i64, i64* %46, align 8
  %159 = load i64, i64* %47, align 8
  %160 = load i64, i64* %48, align 8
  %161 = load i64, i64* %51, align 8
  %162 = load i64, i64* %52, align 8
  %163 = load i64, i64* %53, align 8
  %164 = load i64, i64* %54, align 8
  %165 = call i32 @VSHF_B4_SB(i64 %155, i64 %156, i64 %157, i64 %158, i64 %159, i64 %160, i64 %161, i64 %162, i64 %163, i64 %164)
  %166 = load i64, i64* %28, align 8
  %167 = load i64, i64* %28, align 8
  %168 = load i64, i64* %45, align 8
  %169 = load i64, i64* %46, align 8
  %170 = load i64, i64* %47, align 8
  %171 = load i64, i64* %48, align 8
  %172 = load i64, i64* %55, align 8
  %173 = load i64, i64* %56, align 8
  %174 = load i64, i64* %57, align 8
  %175 = load i64, i64* %58, align 8
  %176 = call i32 @VSHF_B4_SB(i64 %166, i64 %167, i64 %168, i64 %169, i64 %170, i64 %171, i64 %172, i64 %173, i64 %174, i64 %175)
  %177 = load i64, i64* %29, align 8
  %178 = load i64, i64* %29, align 8
  %179 = load i64, i64* %45, align 8
  %180 = load i64, i64* %46, align 8
  %181 = load i64, i64* %47, align 8
  %182 = load i64, i64* %48, align 8
  %183 = load i64, i64* %59, align 8
  %184 = load i64, i64* %60, align 8
  %185 = load i64, i64* %61, align 8
  %186 = load i64, i64* %62, align 8
  %187 = call i32 @VSHF_B4_SB(i64 %177, i64 %178, i64 %179, i64 %180, i64 %181, i64 %182, i64 %183, i64 %184, i64 %185, i64 %186)
  %188 = load i64, i64* %30, align 8
  %189 = load i64, i64* %30, align 8
  %190 = load i64, i64* %45, align 8
  %191 = load i64, i64* %46, align 8
  %192 = load i64, i64* %47, align 8
  %193 = load i64, i64* %48, align 8
  %194 = load i64, i64* %63, align 8
  %195 = load i64, i64* %64, align 8
  %196 = load i64, i64* %65, align 8
  %197 = load i64, i64* %66, align 8
  %198 = call i32 @VSHF_B4_SB(i64 %188, i64 %189, i64 %190, i64 %191, i64 %192, i64 %193, i64 %194, i64 %195, i64 %196, i64 %197)
  %199 = load i64, i64* %51, align 8
  %200 = load i64, i64* %52, align 8
  %201 = load i64, i64* %53, align 8
  %202 = load i64, i64* %54, align 8
  %203 = load i32, i32* %37, align 4
  %204 = load i32, i32* %38, align 4
  %205 = load i32, i32* %39, align 4
  %206 = load i32, i32* %40, align 4
  %207 = call i32 @HEVC_FILT_8TAP_SH(i64 %199, i64 %200, i64 %201, i64 %202, i32 %203, i32 %204, i32 %205, i32 %206)
  store i32 %207, i32* %67, align 4
  %208 = load i64, i64* %55, align 8
  %209 = load i64, i64* %56, align 8
  %210 = load i64, i64* %57, align 8
  %211 = load i64, i64* %58, align 8
  %212 = load i32, i32* %37, align 4
  %213 = load i32, i32* %38, align 4
  %214 = load i32, i32* %39, align 4
  %215 = load i32, i32* %40, align 4
  %216 = call i32 @HEVC_FILT_8TAP_SH(i64 %208, i64 %209, i64 %210, i64 %211, i32 %212, i32 %213, i32 %214, i32 %215)
  store i32 %216, i32* %68, align 4
  %217 = load i64, i64* %59, align 8
  %218 = load i64, i64* %60, align 8
  %219 = load i64, i64* %61, align 8
  %220 = load i64, i64* %62, align 8
  %221 = load i32, i32* %37, align 4
  %222 = load i32, i32* %38, align 4
  %223 = load i32, i32* %39, align 4
  %224 = load i32, i32* %40, align 4
  %225 = call i32 @HEVC_FILT_8TAP_SH(i64 %217, i64 %218, i64 %219, i64 %220, i32 %221, i32 %222, i32 %223, i32 %224)
  store i32 %225, i32* %69, align 4
  %226 = load i64, i64* %63, align 8
  %227 = load i64, i64* %64, align 8
  %228 = load i64, i64* %65, align 8
  %229 = load i64, i64* %66, align 8
  %230 = load i32, i32* %37, align 4
  %231 = load i32, i32* %38, align 4
  %232 = load i32, i32* %39, align 4
  %233 = load i32, i32* %40, align 4
  %234 = call i32 @HEVC_FILT_8TAP_SH(i64 %226, i64 %227, i64 %228, i64 %229, i32 %230, i32 %231, i32 %232, i32 %233)
  store i32 %234, i32* %70, align 4
  %235 = load i64, i64* %31, align 8
  %236 = load i64, i64* %31, align 8
  %237 = load i64, i64* %45, align 8
  %238 = load i64, i64* %46, align 8
  %239 = load i64, i64* %47, align 8
  %240 = load i64, i64* %48, align 8
  %241 = load i64, i64* %51, align 8
  %242 = load i64, i64* %52, align 8
  %243 = load i64, i64* %53, align 8
  %244 = load i64, i64* %54, align 8
  %245 = call i32 @VSHF_B4_SB(i64 %235, i64 %236, i64 %237, i64 %238, i64 %239, i64 %240, i64 %241, i64 %242, i64 %243, i64 %244)
  %246 = load i64, i64* %32, align 8
  %247 = load i64, i64* %32, align 8
  %248 = load i64, i64* %45, align 8
  %249 = load i64, i64* %46, align 8
  %250 = load i64, i64* %47, align 8
  %251 = load i64, i64* %48, align 8
  %252 = load i64, i64* %55, align 8
  %253 = load i64, i64* %56, align 8
  %254 = load i64, i64* %57, align 8
  %255 = load i64, i64* %58, align 8
  %256 = call i32 @VSHF_B4_SB(i64 %246, i64 %247, i64 %248, i64 %249, i64 %250, i64 %251, i64 %252, i64 %253, i64 %254, i64 %255)
  %257 = load i64, i64* %33, align 8
  %258 = load i64, i64* %33, align 8
  %259 = load i64, i64* %45, align 8
  %260 = load i64, i64* %46, align 8
  %261 = load i64, i64* %47, align 8
  %262 = load i64, i64* %48, align 8
  %263 = load i64, i64* %59, align 8
  %264 = load i64, i64* %60, align 8
  %265 = load i64, i64* %61, align 8
  %266 = load i64, i64* %62, align 8
  %267 = call i32 @VSHF_B4_SB(i64 %257, i64 %258, i64 %259, i64 %260, i64 %261, i64 %262, i64 %263, i64 %264, i64 %265, i64 %266)
  %268 = load i64, i64* %51, align 8
  %269 = load i64, i64* %52, align 8
  %270 = load i64, i64* %53, align 8
  %271 = load i64, i64* %54, align 8
  %272 = load i32, i32* %37, align 4
  %273 = load i32, i32* %38, align 4
  %274 = load i32, i32* %39, align 4
  %275 = load i32, i32* %40, align 4
  %276 = call i32 @HEVC_FILT_8TAP_SH(i64 %268, i64 %269, i64 %270, i64 %271, i32 %272, i32 %273, i32 %274, i32 %275)
  store i32 %276, i32* %71, align 4
  %277 = load i64, i64* %55, align 8
  %278 = load i64, i64* %56, align 8
  %279 = load i64, i64* %57, align 8
  %280 = load i64, i64* %58, align 8
  %281 = load i32, i32* %37, align 4
  %282 = load i32, i32* %38, align 4
  %283 = load i32, i32* %39, align 4
  %284 = load i32, i32* %40, align 4
  %285 = call i32 @HEVC_FILT_8TAP_SH(i64 %277, i64 %278, i64 %279, i64 %280, i32 %281, i32 %282, i32 %283, i32 %284)
  store i32 %285, i32* %72, align 4
  %286 = load i64, i64* %59, align 8
  %287 = load i64, i64* %60, align 8
  %288 = load i64, i64* %61, align 8
  %289 = load i64, i64* %62, align 8
  %290 = load i32, i32* %37, align 4
  %291 = load i32, i32* %38, align 4
  %292 = load i32, i32* %39, align 4
  %293 = load i32, i32* %40, align 4
  %294 = call i32 @HEVC_FILT_8TAP_SH(i64 %286, i64 %287, i64 %288, i64 %289, i32 %290, i32 %291, i32 %292, i32 %293)
  store i32 %294, i32* %73, align 4
  %295 = load i32, i32* %19, align 4
  store i32 %295, i32* %21, align 4
  br label %296

296:                                              ; preds = %300, %128
  %297 = load i32, i32* %21, align 4
  %298 = add nsw i32 %297, -1
  store i32 %298, i32* %21, align 4
  %299 = icmp ne i32 %297, 0
  br i1 %299, label %300, label %410

300:                                              ; preds = %296
  %301 = load i32*, i32** %23, align 8
  %302 = call i64 @LD_SB(i32* %301)
  store i64 %302, i64* %34, align 8
  %303 = load i64, i64* %34, align 8
  %304 = call i64 @__msa_xori_b(i64 %303, i32 128)
  store i64 %304, i64* %34, align 8
  %305 = load i32, i32* %12, align 4
  %306 = load i32*, i32** %23, align 8
  %307 = sext i32 %305 to i64
  %308 = getelementptr inbounds i32, i32* %306, i64 %307
  store i32* %308, i32** %23, align 8
  %309 = load i32*, i32** %24, align 8
  %310 = call i32 @LD_SH(i32* %309)
  store i32 %310, i32* %35, align 4
  %311 = load i32, i32* %14, align 4
  %312 = load i32*, i32** %24, align 8
  %313 = sext i32 %311 to i64
  %314 = getelementptr inbounds i32, i32* %312, i64 %313
  store i32* %314, i32** %24, align 8
  %315 = load i64, i64* %34, align 8
  %316 = load i64, i64* %34, align 8
  %317 = load i64, i64* %45, align 8
  %318 = load i64, i64* %46, align 8
  %319 = load i64, i64* %47, align 8
  %320 = load i64, i64* %48, align 8
  %321 = load i64, i64* %51, align 8
  %322 = load i64, i64* %52, align 8
  %323 = load i64, i64* %53, align 8
  %324 = load i64, i64* %54, align 8
  %325 = call i32 @VSHF_B4_SB(i64 %315, i64 %316, i64 %317, i64 %318, i64 %319, i64 %320, i64 %321, i64 %322, i64 %323, i64 %324)
  %326 = load i64, i64* %51, align 8
  %327 = load i64, i64* %52, align 8
  %328 = load i64, i64* %53, align 8
  %329 = load i64, i64* %54, align 8
  %330 = load i32, i32* %37, align 4
  %331 = load i32, i32* %38, align 4
  %332 = load i32, i32* %39, align 4
  %333 = load i32, i32* %40, align 4
  %334 = call i32 @HEVC_FILT_8TAP_SH(i64 %326, i64 %327, i64 %328, i64 %329, i32 %330, i32 %331, i32 %332, i32 %333)
  store i32 %334, i32* %74, align 4
  %335 = load i32, i32* %68, align 4
  %336 = load i32, i32* %67, align 4
  %337 = load i32, i32* %77, align 4
  %338 = load i32, i32* %81, align 4
  %339 = call i32 @ILVRL_H2_SH(i32 %335, i32 %336, i32 %337, i32 %338)
  %340 = load i32, i32* %70, align 4
  %341 = load i32, i32* %69, align 4
  %342 = load i32, i32* %78, align 4
  %343 = load i32, i32* %82, align 4
  %344 = call i32 @ILVRL_H2_SH(i32 %340, i32 %341, i32 %342, i32 %343)
  %345 = load i32, i32* %72, align 4
  %346 = load i32, i32* %71, align 4
  %347 = load i32, i32* %79, align 4
  %348 = load i32, i32* %83, align 4
  %349 = call i32 @ILVRL_H2_SH(i32 %345, i32 %346, i32 %347, i32 %348)
  %350 = load i32, i32* %74, align 4
  %351 = load i32, i32* %73, align 4
  %352 = load i32, i32* %80, align 4
  %353 = load i32, i32* %84, align 4
  %354 = call i32 @ILVRL_H2_SH(i32 %350, i32 %351, i32 %352, i32 %353)
  %355 = load i32, i32* %77, align 4
  %356 = load i32, i32* %78, align 4
  %357 = load i32, i32* %79, align 4
  %358 = load i32, i32* %80, align 4
  %359 = load i32, i32* %41, align 4
  %360 = load i32, i32* %42, align 4
  %361 = load i32, i32* %43, align 4
  %362 = load i32, i32* %44, align 4
  %363 = call i32 @HEVC_FILT_8TAP(i32 %355, i32 %356, i32 %357, i32 %358, i32 %359, i32 %360, i32 %361, i32 %362)
  store i32 %363, i32* %75, align 4
  %364 = load i32, i32* %81, align 4
  %365 = load i32, i32* %82, align 4
  %366 = load i32, i32* %83, align 4
  %367 = load i32, i32* %84, align 4
  %368 = load i32, i32* %41, align 4
  %369 = load i32, i32* %42, align 4
  %370 = load i32, i32* %43, align 4
  %371 = load i32, i32* %44, align 4
  %372 = call i32 @HEVC_FILT_8TAP(i32 %364, i32 %365, i32 %366, i32 %367, i32 %368, i32 %369, i32 %370, i32 %371)
  store i32 %372, i32* %76, align 4
  %373 = load i32, i32* %75, align 4
  %374 = ashr i32 %373, 6
  store i32 %374, i32* %75, align 4
  %375 = load i32, i32* %76, align 4
  %376 = ashr i32 %375, 6
  store i32 %376, i32* %76, align 4
  %377 = load i32, i32* %76, align 4
  %378 = load i32, i32* %75, align 4
  %379 = call i32 @__msa_pckev_h(i32 %377, i32 %378)
  store i32 %379, i32* %36, align 4
  %380 = load i32, i32* %36, align 4
  %381 = load i32, i32* %35, align 4
  %382 = load i32, i32* %36, align 4
  %383 = load i32, i32* %50, align 4
  %384 = load i32, i32* %36, align 4
  %385 = load i32, i32* %36, align 4
  %386 = call i32 @ADDS_SH2_SH(i32 %380, i32 %381, i32 %382, i32 %383, i32 %384, i32 %385)
  %387 = load i32, i32* %36, align 4
  %388 = call i32 @__msa_srari_h(i32 %387, i32 7)
  store i32 %388, i32* %36, align 4
  %389 = load i32, i32* %36, align 4
  %390 = call i32 @CLIP_SH_0_255(i32 %389)
  %391 = load i32, i32* %36, align 4
  %392 = sext i32 %391 to i64
  %393 = load i32, i32* %36, align 4
  %394 = sext i32 %393 to i64
  %395 = call i64 @__msa_pckev_b(i64 %392, i64 %394)
  store i64 %395, i64* %26, align 8
  %396 = load i64, i64* %26, align 8
  %397 = load i32*, i32** %25, align 8
  %398 = call i32 @ST_D1(i64 %396, i32 0, i32* %397)
  %399 = load i32, i32* %16, align 4
  %400 = load i32*, i32** %25, align 8
  %401 = sext i32 %399 to i64
  %402 = getelementptr inbounds i32, i32* %400, i64 %401
  store i32* %402, i32** %25, align 8
  %403 = load i32, i32* %68, align 4
  store i32 %403, i32* %67, align 4
  %404 = load i32, i32* %69, align 4
  store i32 %404, i32* %68, align 4
  %405 = load i32, i32* %70, align 4
  store i32 %405, i32* %69, align 4
  %406 = load i32, i32* %71, align 4
  store i32 %406, i32* %70, align 4
  %407 = load i32, i32* %72, align 4
  store i32 %407, i32* %71, align 4
  %408 = load i32, i32* %73, align 4
  store i32 %408, i32* %72, align 4
  %409 = load i32, i32* %74, align 4
  store i32 %409, i32* %73, align 4
  br label %296

410:                                              ; preds = %296
  %411 = load i32*, i32** %11, align 8
  %412 = getelementptr inbounds i32, i32* %411, i64 8
  store i32* %412, i32** %11, align 8
  %413 = load i32*, i32** %15, align 8
  %414 = getelementptr inbounds i32, i32* %413, i64 8
  store i32* %414, i32** %15, align 8
  %415 = load i32*, i32** %13, align 8
  %416 = getelementptr inbounds i32, i32* %415, i64 8
  store i32* %416, i32** %13, align 8
  br label %124

417:                                              ; preds = %124
  ret void
}

declare dso_local i64 @LD_SB(i32*) #1

declare dso_local i32 @__msa_ldi_h(i32) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @UNPCK_R_SB_SH(i32, i32) #1

declare dso_local i32 @SPLATI_W4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB7(i32*, i32, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B7_128_SB(i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B4_SB(i64, i64, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @HEVC_FILT_8TAP_SH(i64, i64, i64, i64, i32, i32, i32, i32) #1

declare dso_local i64 @__msa_xori_b(i64, i32) #1

declare dso_local i32 @ILVRL_H2_SH(i32, i32, i32, i32) #1

declare dso_local i32 @HEVC_FILT_8TAP(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_pckev_h(i32, i32) #1

declare dso_local i32 @ADDS_SH2_SH(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_srari_h(i32, i32) #1

declare dso_local i32 @CLIP_SH_0_255(i32) #1

declare dso_local i64 @__msa_pckev_b(i64, i64) #1

declare dso_local i32 @ST_D1(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
